v1.0.0/modules/schema/pages/class/PendingCalculation.adoc
= `PendingCalculation`
:toclevels: 4


+++When present, a scalar conversion that needs to be applied to every IntervalReading.value contained in IntervalBlock. This conversion results in a new associated ReadingType, reflecting the true dimensions of IntervalReading values after the conversion.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PendingCalculation`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`PendingCalculation`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
PendingCalculation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ReadingType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



IntervalBlock {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}




PendingCalculation -> ReadingType: ReadingType


PendingCalculation -> IntervalBlock: IntervalBlocks


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ReadingType,`ReadingType`>>
| 1
| xref::class/ReadingType.adoc[`ReadingType`]
| +++Reading type resulting from this pending conversion.+++

| <<multiplyBeforeAdd,`multiplyBeforeAdd`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Whether scalars should be applied before adding the 'offset'.+++

| <<offset,`offset`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++(if applicable) Offset to be added as well as multiplication using scalars.+++

| <<scalarDenominator,`scalarDenominator`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++(if scalar is rational number) When 'IntervalReading.value' is multiplied by 'scalarNumerator' and divided by this value, it causes a unit of measure conversion to occur, resulting in the 'ReadingType.unit'.+++

| <<scalarFloat,`scalarFloat`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++(if scalar is floating number) When multiplied with 'IntervalReading.value', it causes a unit of measure conversion to occur, according to the 'ReadingType.unit'.+++

| <<scalarNumerator,`scalarNumerator`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++(if scalar is integer or rational number)  When the scalar is a simple integer, and this attribute is presented alone and multiplied with 'IntervalReading.value', it causes a unit of measure conversion to occur, resulting in the 'ReadingType.unit'. It is never used in conjunction with 'scalarFloat', only with 'scalarDenominator'.+++

| <<IntervalBlocks,`IntervalBlocks`>>
| 0..*
| xref::class/IntervalBlock.adoc[`IntervalBlock`]
| +++All blocks of interval reading values to which this pending conversion applies.+++
|===

'''


//[discrete]
[#IntervalBlocks]
=== `IntervalBlocks`
+++All blocks of interval reading values to which this pending conversion applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PendingCalculation.IntervalBlocks`
| Cardinality
| 0..*
| Type
| xref::class/IntervalBlock.adoc[`IntervalBlock`]


|===

//[discrete]
[#multiplyBeforeAdd]
=== `multiplyBeforeAdd`
+++Whether scalars should be applied before adding the 'offset'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PendingCalculation.multiplyBeforeAdd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#offset]
=== `offset`
+++(if applicable) Offset to be added as well as multiplication using scalars.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PendingCalculation.offset`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#ReadingType]
=== `ReadingType`
+++Reading type resulting from this pending conversion.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PendingCalculation.ReadingType`
| Cardinality
| 1
| Type
| xref::class/ReadingType.adoc[`ReadingType`]


|===

//[discrete]
[#scalarDenominator]
=== `scalarDenominator`
+++(if scalar is rational number) When 'IntervalReading.value' is multiplied by 'scalarNumerator' and divided by this value, it causes a unit of measure conversion to occur, resulting in the 'ReadingType.unit'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PendingCalculation.scalarDenominator`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#scalarFloat]
=== `scalarFloat`
+++(if scalar is floating number) When multiplied with 'IntervalReading.value', it causes a unit of measure conversion to occur, according to the 'ReadingType.unit'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PendingCalculation.scalarFloat`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#scalarNumerator]
=== `scalarNumerator`
+++(if scalar is integer or rational number)  When the scalar is a simple integer, and this attribute is presented alone and multiplied with 'IntervalReading.value', it causes a unit of measure conversion to occur, resulting in the 'ReadingType.unit'. It is never used in conjunction with 'scalarFloat', only with 'scalarDenominator'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PendingCalculation.scalarNumerator`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===


